# bevy_control_board

./: Cargo.toml  README.md
assets/shaders/: bezier.frag  bounding_box.frag  graph.frag  graph_backup.frag  knob.frag  shader_defs.wgsl
derive-macro/: Cargo.toml
derive-macro/src/: attr.rs  dash_enum.rs  dash_struct.rs  lib.rs  lib_backup.rs
src/: main.rs
util/: mod.rs
