[package]
name = "derive-macro"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
strum = "0.22.0"
strum_macros = "0.22"
thiserror = "1.0"

serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }